# device_trust

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
android/: build.gradle  consumer-proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  device_trust_native.cpp
android/src/main/kotlin/com/mikoloy/device_trust/: DeviceTrust.kt  DeviceTrustLog.kt  DeviceTrustNative.kt  (+1 more)
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: device_trust.podspec
ios/Classes/: DeviceTrustPlugin.swift
ios/Classes/DeviceTrust/: DeviceTrust.swift  DeviceTrustNative.mm
ios/device_trust/: Package.swift
ios/device_trust/Sources/device_trust/: DeviceTrust.swift
ios/device_trust/Sources/device_trust_native/: DeviceTrustNative.mm
ios/device_trust/Sources/device_trust_native/include/device_trust_native/: DeviceTrustNative.h
lib/: device_trust.dart  device_trust_method_channel.dart  device_trust_platform_interface.dart
test/: device_trust_method_channel_test.dart  device_trust_test.dart
(+2 files in other folders)
